[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/Mundo.gd" type="Script" id=2]
[ext_resource path="res://Monstruo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interfaz.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -320, -408, 0, 0, 0, 0, 1920, -400, 0, 0, 0, 0, 1912, 944, 0, 0, 0, 0, -312, 936, 0, 0, 0, 0, -320, -408 )
}

[node name="Mundo" type="Node"]
script = ExtResource( 2 )
Monstruo = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 808, 392 )

[node name="MonstruoTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="PunteoTimer" type="Timer" parent="."]

[node name="InicioTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PosicionDeInicio" type="Position2D" parent="."]
position = Vector2( 640, 360 )

[node name="Camino" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MonstruoPosicion" type="PathFollow2D" parent="Camino"]
position = Vector2( -320, -408 )
rotation = 0.00355396

[node name="Interfaz" parent="." instance=ExtResource( 4 )]

[connection signal="golpe" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MonstruoTimer" to="." method="_on_MonstruoTimer_timeout"]
[connection signal="timeout" from="PunteoTimer" to="." method="_on_PunteoTimer_timeout"]
[connection signal="timeout" from="InicioTimer" to="." method="_on_InicioTimer_timeout"]
[connection signal="iniciar_juego" from="Interfaz" to="." method="nuevo_juego"]
